welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  Color.RED
        ^FlowerPot:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  Color.CYAN
        ^FlowerPot:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  Color.ORANGE
        ^FlowerPot:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  Color.PINK
        ^FlowerPot:34: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  Color.GREEN
        ^FlowerPot:55: error: not found: value color
  color.YELLOW
  ^